[project]
name = "chat-with-pdf-streamlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-chroma>=0.1.4",
    "langchain-community>=0.3.2",
    "langchain>=0.3.3",
    "pymupdf>=1.24.11",
    "streamlit>=1.39.0",
    "protobuf==3.20.*",
    "langchain-openai>=0.2.2",
]
